<resources>
    <string name="app_name">i黑密</string>
    <string name="open">drawer_open</string>
    <string name="close">drawer_close</string>
    <string name="home">主页</string>
    <string name="suggest">专家建议</string>
    <string name="light">光照</string>
    <string name="mall">Mall</string>
    <string name="mine">我的</string>
    <string name="next">下一步</string>
    <string name="scanning">   扫描设备···</string>
    <string name="double_click_exit">再按一次退出程序</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo_notice">清晰，完整的照片才能让我们的后台专家准确判断您的病情，请在白天，光线充足的情况下，由您的朋友或家人按照以下的示范图及要求为您拍照。</string>
    <string name="top_view">顶视图</string>
    <string name="top_view_notice">要求拍摄者站在被拍者前方，手机位于被拍者头顶正上方，取景框两侧基本被头部图像占满，前后留有空隙，要求清晰无炫光。</string>
    <string name="hair_line_view">发际线图</string>
    <string name="hair_line_view_notice">要求拍摄者站在被拍者前方，手机位于被拍者头顶斜上方，用手撸起被拍者前部头发，露出完整的发际线，取景框中有完整的鼻子图像，左右两侧基本被头发占满，要求清晰无炫光。</string>
    <string name="rear_view">后视图</string>
    <string name="rear_view_notice">要求拍摄者站在被拍者后方，手机位于被拍者头部正后方，取景框左右基本被头发占满。要求清晰无炫光。</string>
    <string name="side_view">局部视图</string>
    <string name="side_view_notice">根据脱发的具体情况，自由选择脱发的重点部位近距离拍照，要求清晰无炫光。</string>
    <string name="complete_and_upload">确认上传</string>
    <string name="remind_title">为保证疗效，默认每两天提醒一次</string>
    <string name="chosetime">设定每次提醒的时间:</string>
    <string name="save">保存</string>
    <string name="hour_hint">时</string>
    <string name="minute_hint">分</string>
    <string name="isRemind">打开提醒功能</string>
    <string name="treat">光照</string>
    <string name="report">专家建议</string>
    <string name="remind">提醒</string>
    <string name="evaluation">效果评估</string>
    <string name="about">我的</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="save_success">已保存</string>
    <string name="name">姓名</string>
    <string name="name_hint">输入真实的姓名</string>
    <string name="sex">性别</string>
    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="age">年龄</string>
    <string name="age_hint">输入年龄</string>
    <string name="info_notice">*请确保填写真实的信息，便于我们更好地为您服务</string>
    <string name="process">本月光照计划</string>
    <string name="tital">共 次</string>
    <string name="temperature">温度</string>
    <string name="wet_degree">油脂度</string>
    <string name="nopower_notice">电量不足请充电!</string>
    <string name="lowpower_notice">电量低请在使用后充电</string>
    <string name="discounected">未连接</string>
    <string name="connected">已连接</string>
    <string name="treating">正在光照</string>
    <string name="treat_over">光照结束</string>
    <string name="treat_pause">光照暂停</string>
    <string name="record_plan">本月的记录</string>
    <string name="input_tip">请输入以下信息:</string>
    <string name="lastdevicce_connected">已连接上次的设备</string>
    <string name="device_scanning">正在搜索设备···</string>
    <string name="start_scan">开始搜索···</string>
    <string name="menu">菜单</string>
    <string name="dialog_bt">请选择头盔进行连接</string>
    <string name="scan_again">重新搜索</string>
    <string name="contrast">对比</string>
    <string name="chose_device">请选择正确的设备进行连接</string>
    <string name="reconnect">重新搜索</string>
    <string name="connect">连接</string>
    <string name="my_schedule">我的进度</string>
    <string name="treatment_suggest">治疗建议</string>
    <string name="notice">在90天后,我们会要求您做后续咨询服务并拍照上传</string>
    <string name="my_report">我的报告</string>
    <string name="hair_situation">您目前的脱发情况属于:</string>
    <string name="alopecia_history">脱发病史</string>
    <string name="changePassword">修改密码</string>
    <string name="phone">输入手机号</string>
    <string name="typeCaptcha">输入验证码</string>
    <string name="typeNewPassword">输入新密码</string>
    <string name="surePassword">确认新密码</string>
    <string name="register">注册</string>
    <string name="again_validate">重新获取</string>
    <string name="sure">确认</string>
    <string name="address_hint">重新获取</string>
    <string name="tip">提示</string>
    <string name="acquire_ble_service">Acquired BLE service</string>
    <string name="connect_last_device">已连接上次的设备</string>
    <string name="bt_open">蓝牙已打开</string>
    <string name="not_surport_bt">此设备不支持蓝牙</string>
    <string name="location_for_bt">允许定位才能搜索蓝牙</string>
    <string name="side_title_treatment">光照</string>
    <string name="side_title_report">专家建议</string>
    <string name="side_title_remind">提醒</string>
    <string name="side_title_evaluation">效果评估</string>
    <string name="side_title_me">我的</string>
    <string name="after_use">使用后</string>
    <string name="before_use">使用前</string>
    <string name="sure_logout">确定要退出登录吗？</string>
    <string name="tips">提示：</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="my_equipment">我的设备</string>
    <string name="change_psw">修改密码</string>
    <string name="Logout">退出登录</string>
    <string name="eqipment_authority">绑定获取专家服务</string>
    <string name="treatment">光照</string>
    <string name="double_press_exit">再按一次退出程序</string>
    <string name="psw_mistake">账号或密码错误</string>
    <string name="net_error">网络错误</string>
    <string name="phone_format_error">手机号码不正确</string>
    <string name="phone_or_psw_cant_null">手机号或密码不能为空</string>
    <string name="network_server_error">网络或服务器异常，加载失败！</string>
    <string name="retry">重试</string>
    <string name="empty_data">暂无历史报告</string>
    <string name="report_detail">报告详情</string>
    <string name="take_upload">拍照上传</string>
    <string name="take_all_photo">请在拍完所有照片后继续</string>
    <string name="compare_last">相对您上一次问诊的情况变化</string>
    <string name="oil_jianshao">是否有头油明显减少的感觉？</string>
    <string name="touxie_jiaoshao">头屑，头皮瘙痒有无明显的减轻？</string>
    <string name="saoyang_jianqing">头皮红疹有无明显减轻？</string>
    <string name="hongzhennongbao_jianshao">脱发速度是否减缓？</string>
    <string name="loss_speed_compare">是否长出新生绒毛？</string>
    <string name="upload_success">上传成功</string>
    <string name="regis">注册</string>
    <string name="total">"共 "</string>
    <string name="times">" 次"</string>
    <string name="scan_result_null">未发现蓝牙设备，请重试</string>
    <string name="is_medicine">是否在同时使用药物？</string>
    <string name="is_cuzhuang">头发是否有变粗壮的感觉？</string>
    <string name="sun">日</string>
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="device_number">设备编号</string>
    <string name="question">常见问题</string>
    <string name="scan">扫描二维码</string>
    <string name="scan_tip">扫描头盔内的二维码以识别头盔型号</string>
    <string name="followup">随诊信息</string>
    <string name="device_scan">获取专家服务</string>
    <string name="user_guide">用户手册</string>
    <string name="download_share">下载分享</string>
    <string name="auto_login">自动登录</string>
    <string name="hairloss_history">脱发病史</string>
    <string name="monthly_records">本月治疗的次数:</string>
    <string name="total_records">" \n  总计治疗次数:"</string>
    <string name="bind_helmet">绑定头盔</string>
    <string name="skip">跳过</string>
    <string name="communication">联系客服</string>
    <string name="copyright">版权归深圳市智连众康科技有限公司所有</string>
    <string name="scan_to_download">扫描此二维码下载APP</string>
    <string name="customer_service">联系客服</string>
    <string name="scan_to_service">扫描此二维码或添加微信号：slinph18138229194</string>
    <string name="service_phone">咨询电话：400–801–8030转1</string>
    <string-array name="hour_display">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="minute_display">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string-array name="half_day">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string name="title_activity_protocol">ProtocolActivity</string>
    <string name="remind_tip">*由于各个手机厂家的定制系统差异，安全软件拦截以及网络服务提供商的服务设置等问题，不能保证所有机型的手机都能够准确的收到提醒推送通知。</string>
</resources>