<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/input_tip"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="#666"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/global_theme_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/font_normal"/>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/name_hint"
            android:textColorHint="#aaa"
            android:paddingLeft="10dp"
            android:textSize="@dimen/font_normal"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/global_theme_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="@dimen/font_normal"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            //style="@style/RadioButton"
            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:button="@null"
                android:checked="true"
                android:drawableLeft="@drawable/radiobtn_selctor"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:tag="男"
                android:text="@string/male"
                android:textSize="@dimen/font_normal"/>
            <!--style="@style/RadioButton"-->
            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:button="@null"
                android:drawableLeft="@drawable/radiobtn_selctor"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:tag="女"
                android:text="@string/female"
                android:textSize="@dimen/font_normal"/>
        </RadioGroup>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/global_theme_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="@dimen/font_normal"/>

        <EditText
            android:id="@+id/edit_age"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/age_hint"
            android:textColorHint="#aaa"
            android:inputType="number"
            android:maxLength="3"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textSize="@dimen/font_normal"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/red"
        android:text="@string/info_notice"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@drawable/common_btn_radius_blue_shape"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"/>

</LinearLayout>
