<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="@dimen/edittexth"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/chosetime"
        android:textSize="17sp"
        android:textColor="#888"
        android:padding="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        >
    <cn.carbswang.android.numberpickerview.library.NumberPickerView
        android:id="@+id/picker_hour"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:contentDescription="picker_hour"
        app:npv_HintText="@string/hour_hint"
        app:npv_ItemPaddingHorizental="5dp"
        app:npv_ItemPaddingVertical="5dp"
        app:npv_ShowCount="3"
        app:npv_TextArray="@array/hour_display"
        app:npv_TextSizeNormal="16sp"
        app:npv_TextSizeSelected="20sp"
        app:npv_WrapSelectorWheel="true"/>

    <cn.carbswang.android.numberpickerview.library.NumberPickerView
        android:id="@+id/picker_minute"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:contentDescription="picker_minute"
        app:npv_HintText="@string/minute_hint"
        app:npv_ItemPaddingHorizental="5dp"
        app:npv_ItemPaddingVertical="5dp"
        app:npv_ShowCount="3"
        app:npv_TextArray="@array/minute_display"
        app:npv_TextSizeNormal="16sp"
        app:npv_TextSizeSelected="20sp"
        app:npv_WrapSelectorWheel="true"/>

<!--    <cn.carbswang.android.numberpickerview.library.NumberPickerView
        android:id="@+id/picker_half_day"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:contentDescription="picker_half_day"
        app:npv_ItemPaddingHorizental="5dp"
        app:npv_ItemPaddingVertical="5dp"
        app:npv_ShowCount="3"
        app:npv_TextArray="@array/half_day"
        app:npv_TextSizeNormal="16sp"
        app:npv_TextSizeSelected="20sp"
        app:npv_WrapSelectorWheel="false"/>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/cb_isRemind"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isRemind"
            android:layout_gravity="center_vertical"
            android:padding="15dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remind_title"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:padding="20dp"
        android:textSize="15sp"
        android:textColor="#888"
        />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/common_btn_radius_blue_shape"
        android:text="@string/save"
        android:layout_marginBottom="60dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remind_tip"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textSize="10sp"
        />


</LinearLayout>