<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="320dp"
              android:layout_height="410dp"
              android:background="#EFEFEF"
              android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/action_bar_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/show_month_view"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="10dip"
            android:gravity="center"
            android:textColor="#fffffe"
            android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/show_month_view"
            android:orientation="vertical">

            <TextView
                android:id="@+id/show_year_view"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="top|left"
                android:paddingTop="1dip"
                android:textColor="#fffffe"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/show_week_view"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="bottom|left"
                android:paddingBottom="1dip"
                android:textColor="#fffffe"
                android:textSize="12sp"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fffffe"
        android:orientation="vertical"
        >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#20000000"/>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="20dip"
            android:layout_marginBottom="2dip"
            android:layout_marginTop="2dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip">

            <TableRow>

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/sun"
                    android:textColor="@color/date_1"/>

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/mon"
                    android:textColor="@color/date_2"/>

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/tue"
                    android:textColor="@color/date_2"/>

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/wed"
                    android:textColor="@color/date_2"/>

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/thu"
                    android:textColor="@color/date_2"/>

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/fri"
                    android:textColor="@color/date_2"/>

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/sat"
                    android:textColor="@color/date_1"/>
            </TableRow>
        </TableLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#20000000"/>
    </LinearLayout>

    <com.slinph.ihairhelmet4.view.CalendarView
        android:id="@+id/calendarView"
        android:layout_width="320dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:background="#EFEFEF"/>

    <TextView
        android:id="@+id/tv_prompt"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="@color/white"
        android:gravity="center"
        android:textSize="14sp"/>
</LinearLayout>