<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.slinph.ihairhelmet4.activity.DownloadShareActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/holo_blue_dark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/download_share"
            android:textSize="25sp"
            android:gravity="center"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@mipmap/btn_back_wirth"
            android:background="@android:color/transparent"
            android:layout_marginLeft="10dp"
            android:id="@+id/ib_share_back"/>
    </FrameLayout>

    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/qrcode"
            android:layout_centerInParent="true"
            android:id="@+id/iv_code"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_code"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/scan_to_download"
        android:gravity="center"
        android:id="@+id/tv_help"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_help"
        android:textSize="10sp"
        android:text="@string/copyright"
        android:gravity="center"/>

</RelativeLayout>
